# VulkanCI

./: .gitignore  README.md  action.yml
.github/workflows/: build-artifacts.yml  build.yml  draft-release.yml  test.yml
test/: CMakeLists.txt  test.cpp
